Update TypeScript configuration for improved module handling and strict type checking

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,11 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "strict": true
   }
 }
