--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "path": ["node_modules/path-browserify"]
     },
     "module": "ESNext",
     "moduleResolution": "Node",
